tests/many-vars/out.txt
error: mismatched types: expected unit, found int -> ('46 -> '45 -> '46) -> '46 -> '45 -> int -> '47 -> ('47 -> '47) -> '46 -> '45 -> '46
  ┌─ err.sml:3:1
  │
3 │ val _: unit = go
  │ ^^^^^^^^^^^^^^^^

typechecking failed
